--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         <button id="add-blue">添加蓝方</button>
         <button id="reset">重置</button>
         <button id="toggle-rotation">显示/隐藏旋转控制</button>
+        <button id="screenshot">截图</button>
     </div>
 
     <script src="script.js"></script>
